--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #333;
-  background-color: #f9f9f9;
+  background: rgba(158,109,158,1);
   margin: 0;
   padding: 0;
 }
@@ -36,7 +36,7 @@ section h4 {
 }
 
 .content {
-  background: rgba(249,249,249,0.5);
+  color: rgba(255,255,255,0.75);
 }
 
 .splash {
@@ -52,4 +52,5 @@ section h4 {
 .info p {
   font-size: 0.8em;
   line-height: 1;
+  color: rgba(255,255,255,0.9);
 }
